--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
             "email": "valentin.pfeil@ecole-air.fr"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
-        "monolog/monolog": "2.x-dev"
+        "monolog/monolog": "^2.2"
     }
 }
