--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,25 @@
     "description": "Projet",
     "type": "project",
     "license": "MIT",
-    "authors": [
+    "authors":
+    [
         {
             "name": "valpfei",
             "email": "valentin.pfeil@ecole-air.fr"
         }
     ],
+    
     "minimum-stability": "stable",
-    "require": {
+    "require":
+    {
         "monolog/monolog": "^2.2"
+    },
+
+    "autoload":
+    {
+            "psr-4":    
+                {
+                "Valpfei\\Isrc\\": "src/"
+                }
     }
 }
