--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     {
             "psr-4":    
                 {
-                "Valpfei\\Isrc\\": "src/"
+                "valpfei\\isrc\\": "src/"
                 }
     }
 }
